# bmap2simg

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
debian/: changelog  control  copyright  gbp.conf  rules
src/: android_sparse.rs  bmap.rs  cli.rs  converter.rs  image_reader.rs  main.rs  processor.rs  utils.rs
